# purple-martin-tracker

./: .gitignore  1_🪺_Home.py  README.md  pyproject.toml  run.sh
.streamlit/: config.toml
pages/: 2_📝_New_Nest_Check.py  3_📋_My_Nest_Checks.py
sqlite/: pm_observations.db  pm_observations_backup.db
static/: 2023_eggs.csv  2023_nests.csv  2023_young.csv  2024_eggs.csv  2024_nests.csv  2024_young.csv
utils/: db_utils.py  plot_utils.py
